--- a/index1.css
+++ b/index1.css
@@ -8,19 +8,26 @@
 
       h2 { 
         color:yellow;
+        text-align:center;
       }
       .gunman { 
-        position:absolute;
+       display:inline-block;
         top:55%;
         left:0;
       }
       .tournament{
-        position:absolute;
+         display:inline-block;
         top:63%;
         right:0;
+        width:50px;
 
       }
       h2:hover {
         color: red;
       }
+      .gears{
+      display:inline-block;
+      }
+      
+      
    
